Added icons to inspiration chart

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -182,11 +182,32 @@
       <h3 class="inspiration-headline">Looking to inspiration</h3>
       <p class="inspiration-intro"> The client was inspired not only by the sleek look and feel of sites like Oleena.com, but by the well-crafted inclusion of deeper content than is visually apparent upon first glance.  We wanted the visual layout to provide a deeper look into the product, without the visual clutter that’s inherent to an in depth content strategy.  A one page layout and artful use of anchor links, iconography, tabs, and hover states were all design patterns that we saw contribute to the overall light and airy experience that we needed to keep in mind as we worked to the strategize how to overcome the disparity between content and page real-estate.</p>
       <div class="inspiration-chart">
-        <p class="inspiration-point-1">1 page layout</p>
-        <p class="inspiration-point-2">Anchor links</p>
-        <p class="inspiration-point-3">Iconography</p>
-        <p class="inspiration-point-4">Tabs</p>
-        <p class="inspiration-point-5">Hover states</p>
+
+        <div class="inspiration-point-1">
+          <img class="1-page-icon" src="images/icon-first-page.png" alt="1 page layout icon" width="50px" height=""></img>
+          <p>1 page layout</p>
+        </div>
+
+        <div class="inspiration-point-2">
+          <img class="1-page-icon" src="images/icon-anchor-link.png" alt="1 page layout icon" width="50px" height=""></img>
+          <p>Anchor links</p>
+        </div>
+
+        <div class="inspiration-point-3">
+          <img class="imagery-icon" src="images/icon-image.png" alt="1 page layout icon" width="50px" height=""></img>
+          <p>Iconography</p>
+        </div>
+
+        <div class="inspiration-point-4">
+          <img class="tabs-icon" src="images/icon-tab.png" alt="1 page layout icon" width="50px" height=""></img>
+          <p>Tabs</p>
+        </div>
+
+        <div class="inspiration-point-5">
+          <img class="overlay-icon" src="images/icon-overlay.png" alt="1 page layout icon" width="50px" height=""></img>
+          <p>Hover states</p>
+        </div>
+
       </div>
 
       <h3 class="user-stories-headline">User stories directed by the brief and strategic imperitives Informed the sitemap and content strategy</h3>
