Updated navigation links and mobile hero alignmenton case studies

--- a/about-2.0.html
+++ b/about-2.0.html
@@ -53,10 +53,10 @@
                         <span></span>
                          <ul id="menu">
                           <li>
-                            <a class="nav-work-mobile" href="Index-2.0.html#work">About my work</a>
+                            <a class="nav-work-mobile" href="index.html#work">About my work</a>
                            </li>
                            <li>
-                            <a class="nav-about-mobile" href="Index-2.0.html#about">About Me</a>
+                            <a class="nav-about-mobile" href="index.html#about">About Me</a>
                            </li>
                            <li>
                              <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
