Increased desktop margins

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -75,7 +75,7 @@
     <section class="hero">
 
       <h1 class="hero-headline">Floodlight MS</h1>
-      <p class="hero-copy">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach. </br></br>We obtained project approval through the client’s promotional reviews committee, facilitated a successful implementation process and handed off to the client’s development team earlier than anticipated as a result of our workflow, allowing this brand to advertise their app sooner and increasing opportunity to build value.</p>
+      <p class="hero-copy">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach.</p>
       <img class="case-study-hero-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
 
