--- a/verve-2.0.html
+++ b/verve-2.0.html
@@ -45,7 +45,7 @@
                             <a class="nav-about-mobile" href="index.html#about">About Me</a>
                            </li>
                            <li>
-                             <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_02112022" target="_blank">Download my resume</a>
+                             <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
                            </li>
                             <li>
                               <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
