New work page & various updates

--- a/my-work.html
+++ b/my-work.html
@@ -16,7 +16,7 @@
     <link rel=stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/portfolio-2021-global-components.css">
-    <link rel="stylesheet" href="styles/portfolio-2021-homepage-specific.css">
+    <link rel="stylesheet" href="styles/portfolio-2021-my-work-specific.css">
     <link rel="shortcut icon" type="image/x-icon" href="jess-logo-blue.ico">
 
     <!-- Mobile nav settings to close on clicking anchor link -->
@@ -76,8 +76,8 @@
 
 
     <section class="hero">
-      <h1 class="hero-headline">Hi, I’m Jess, a lead UX designer from New York</h1>
-      <p class="hero-copy">I specialize in creating compelling digital experiences that drive user engagement. Understanding users, business objectives and their symbiotic relationship is at the core of my practice.</p>
+      <h1 class="hero-headline">See my work</h1>
+      <p class="hero-copy">My work spans user experience and user interace design of web, mobile app, and in-person interactive experiences in healthcare, non-profit, self care, and finance. </p>
       <button onclick="window.location.href = '#work';">Read case studies</button>
 
 
@@ -98,20 +98,12 @@
         <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach.</p>
         <!-- <button class="see-the-full-case-study">See the full case study</button> -->
         <button onclick="window.location.href = 'floodlight-ms.html';">See the full case study</button>
-      </div>
-
-      <div class="see-more-work">
-        <h3 class="see-more-work-headline"> Additional case studies</h3>
-        <p class="see-more-work-intro">See addtional case studies featuring past work here.</p>
-        <img class="see-more-work-image" src="intent_partners_images/intent_partners_thumbnail.png" width="" height="" alt="Intent partners image">
-        <button onclick="window.location.href = 'my-work.html';">Learn more</button>
 
       </div>
 
-<!--
-      <h3 class="additional-case-studies-headline">Additional case studies</h3> -->
+      <h3 class="additional-case-studies-headline">Additional case studies</h3>
 
-      <!-- <div class="additional-work">
+      <div class="additional-work">
 
         <div class="card1">
           <img class="card-project-image" src="intent_partners_images/intent_partners_thumbnail.png" alt="Intent Partners homepage screenshot" width="233px" height="133.65px"></img>
@@ -141,23 +133,26 @@
           <button>Coming soon</button>
         </div>
 
-        <div class="card5">
+        <!-- <div class="card5">
           <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Finance | Pre-approved offers</h6>
           <h5 class="card-project-title">Cunexus storefront responsive web experience redesign </h5>
           <button class="card-see-the-full-case-study">Coming soon</button>
-        </div>
-      </div> -->
+        </div> -->
 
+
+
+
+      </div>
     </section>
-
+<!--
     <a name="about"></a>
 
     <section class="about">
       <h2 class=about-headline>About me</h2>
       <p class="about-copy">Hi, I’m Jessica Blanchard, senior UX designer, design mentor and educator. I’m passionate about accessible solutions that drive conversions. My experience spans, healthcare, fintech, non-profit, goverment, and self care in responsive web and mobile applications.</p>
       <button onclick="window.location.href = 'about-2.0.html';">Read more</button>
-    </section>
+    </section> -->
 
     <footer class="footer">
       <p class = "footer-email">hello@jessblanchard.design</p>
