--- a/about-2.0.html
+++ b/about-2.0.html
@@ -40,8 +40,8 @@
     <nav class="primary-navigation">
       <a class="logo" href="index.html">
         <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
-      <a class="nav-work" href="index.html#work">About my work</a>
-      <a class="nav-about" href="index.html#about">About me</a>
+      <a class="nav-work" href="my-work.html">About my work</a>
+      <a class="nav-about" href="about-2.0.html">About me</a>
       <a class="nav-resume" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
       <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
       <!-- Original MOBILE NAV -->
@@ -53,10 +53,10 @@
                         <span></span>
                          <ul id="menu">
                           <li>
-                            <a class="nav-work-mobile" href="index.html#work">About my work</a>
+                            <a class="nav-work-mobile" href="my-work.html">About my work</a>
                            </li>
                            <li>
-                            <a class="nav-about-mobile" href="index.html#about">About Me</a>
+                            <a class="nav-about-mobile" href="about-2.0.html">About Me</a>
                            </li>
                            <li>
                              <a class="nav-resume-mobile" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
