Minor copy changes

--- a/contact-2.0.html
+++ b/contact-2.0.html
@@ -76,7 +76,7 @@
 
 
       <section class="hero">
-          <h1 class="hero-headline">Let's Connect!</h1>
+          <h1 class="hero-headline">Let's connect</h1>
           <p class="hero-copy"> Want to discuss an upcoming project, learn more about my work or chat about inclusive design over coffee? Get in contact!</p>
           <div class="contact-page-details">
             <form method="POST" action="https://formspree.io/hello@jessblanchard.design">
