--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
     <section class="work">
 
-      <h2 class="work-headline">Recent Projects</h2>
+      <h2 class="work-headline">Recent projects</h2>
 
-      <h3 class="featured-case-study-headline">Featured Case Study</h3>
+      <h3 class="featured-case-study-headline">Featured case study</h3>
 
       <div class="featured-work">
         <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot"></img>
@@ -102,7 +102,7 @@
 
       <div class="see-more-work">
         <h3 class="see-more-work-headline"> Additional case studies</h3>
-        <p class="see-more-work-intro">See addtional case studies featuring past work here.</p>
+        <p class="see-more-work-intro">See additional case studies featuring past work here.</p>
         <img class="see-more-work-image" src="intent_partners_images/intent_partners_thumbnail.png" width="" height="" alt="Intent partners image">
         <button onclick="window.location.href = 'my-work.html';">Learn more</button>
 
