--- a/my-work.html
+++ b/my-work.html
@@ -87,7 +87,7 @@
 
     <section class="work">
 
-      <h2 class="work-headline">Recent Projects</h2>
+      <h2 class="work-headline">See my recent work</h2>
 
       <h3 class="featured-case-study-headline">Featured Case Study</h3>
 
