--- a/about-2.0.html
+++ b/about-2.0.html
@@ -78,19 +78,19 @@
 
 
       <section class="hero">
-          <h1 class="hero-headline">It all started with a missing pizza.</h1>
+          <h1 class="hero-headline">It all started with a missing pizza</h1>
           <img class="hero-image" src="images/jb-headshot4.jpg" alt= "Jessica's headshot">
           <p class="hero-copy">UX design is more than a career choice for me; its a function of my commitment to problem solving. It's been a lifelong devotion; but today I'm committed to creating equitable digital experiences, particularly in healthcare. </p>
         </section>
 
       <section class="about-page-bio">
-          <h2>In the Beginning</h2>
+          <h2>In the beginning</h2>
           <p>Growing up on Long Island in the 90s, we relished the deliciousness of a fresh pizza. You remember the kind - cheesy, oily, the kind that came with the little white pizza table to protect its gooey goodness. When the town was slow to repair a downed street sign at our corner, our pizza deliveries stopped showing up.</br></br>After doing a bit of digging, we discovered that the street sign was the core of our problem. So my mother and I went out, shovels in tow, to repair it. She taught me that our street sign, our community and our pizza were our responsibility and we could wait for someone else to fix it or we could step up and do so ourselves.</br></br>This sowed the seed for my interest in problem solving. I grew passionate about looking at any challenge I encountered and exploring how similar issues impacted others and how we could better solve them.</p>
-          <h2>Fast Forward</h2>
+          <h2>Fast forward</h2>
           <p>After studying social psychology and criminology, I spent 10 years helping businesses be more productive through efficient operations and project management. Whenever I had an opportunity to strategize and design a product, I found my problem solving skills firing on all cylinders and I was deeply drawn to the creative aspects of conceptualizing new solutions, while still passionate about the research and analysis side as well.</p>
-          <h2>Users First</h2>
+          <h2>Users first</h2>
           <p>My background in psychology taught me that driving a digital outcome couldn't occur with blinders on. I observed many businesses pursuing outcomes from their clients, employees and stakeholders without considering the impact of their experience prior to a desired result. The principals of user centered experience design aligned completely with my instincts about driving successful business solutions.</p>
-          <h2>A Designer at Heart</h2>
+          <h2>A designer at heart</h2>
           <p>So I decided to build upon my existing skills and experience and pursue UX design full time  by participating in a design program. Today I  design solutions that ensure that user interest and productivity work in synergy.</p>
       </section>
 
