Updates to Floodlight copy

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -85,10 +85,10 @@
 
         <p class="project-overview-copy">Genentech and Roche’s Floodlight MS, is app that allows patients living with MS to complete simple tasks on their devices to capture data that tracks disease progression and allows their providers to interpret  these objective measures through a provider portal. The Floodlight MS app closes gaps in communication and reduces subjectivity in patient reported symptoms. My team was involved in two phases of the website that partners with the app.</p>
 
-        <h3 class="project-problem-headline">The Problem</h3>
+        <h3 class="project-problem-headline">The problem</h3>
         <p class="project-problem-statemnt">The true challenges came down to limited real estate and time. The first phase of of the site served as a pre-launch introduction to the Floodlight MS app and had minimal content. The brief called for the full launch website to have a much more robust content strategy,  which was directly in conflict with the imperative for a minimalistic layout with few pages. Additionally A highly consolidated timeline leading to launch required a new approach to    working efficiently.</p>
 
-        <h3 class="project-solution-headline">The Solution</h3>
+        <h3 class="project-solution-headline">The solution</h3>
         <p class="project-solution-statemnt">Careful consideration of the site architecture and collaboration between UX and copywriting allowed us to deliver robust content in a minimalist layout. We reassessed a legacy workflow between UX and creative direction and shifted our approach to minimize inefficiencies.  By partnering to work in succession with one file; UX and art significantly reduced the time required to transition wireframes into creative design.</p>
         <div class="role-deliverable-tool-grid">
           <div class="role-list-group">
@@ -127,7 +127,7 @@
         <li><p>The scalable, mobile first, site needs to be <strong>content rich, but visually light</strong>.</p></li>
         <li><p><strong>Prioritize reusing previously approved content</strong> already reviewed by governance risk & compliance (GRC).</p></li>
         <li><p><strong>Brand new HCP-specific content</strong> will provided a deep-dive into usage, benefits and onboarding.</p></li>
-        <li><p>We could add <strong>only one new page</strong> to the existing 1-page microsite structure</p></li>
+        <li><p>We could add <strong>only one new page</strong> to the existing 1-page microsite structure.</p></li>
         <li><p>We would <strong>design a global site</strong> and the site design would be provided to and adapted for use by local affiliates, adhering to their local laws and regulations governing medical device messaging.</p></li>
         <li><p>We were to take inspiration from sites that <strong>reflect the client's design vision.</strong></p></li>
         <li><p><strong>Design with the KPIs in mind</strong>: success would be measured by the number of visitors, requests for more info and requests for demo.</p></li>
@@ -137,42 +137,42 @@
     <section class="phase-1">
 
       <h2 class="phase-1-headline">Phase one: the interim microsite</h2>
-      <h3 class="documentation">Documentation of Phase 1</h3>
+      <h3 class="documentation">Documentation of phase one</h3>
       <p class="phase-1-introduction">Continuity between the UX team members who led work on the first phase and the incoming team members who would lead phase two was supported by well prepared documentation, including thorough functional specifications, and working Sketch files that contained symbols ready for application to the phase two project.</p>
-      <h4 class="phase-1-functional-specifications-headline">Phase 1 Functional Specifications</h4>
+      <h4 class="phase-1-functional-specifications-headline">Phase one functional specifications</h4>
       <figure class="phase-1-functional-specifications">
         <img class= "phase-1-functional-specifications-image" src="images/phase-1-functional-specifications.png" alt="Floodlight MS Phase-1 Functional Specifications"></img>
-        <figcaption> Functional specifications prepared by the phase-1 team</figcaption>
+        <figcaption> Functional specifications prepared by the phase one team</figcaption>
       </figure>
-      <h4 class="phase-1-functional-anotations-headline">Phase 1 Functional Anotations</h4>
+      <h4 class="phase-1-functional-anotations-headline">Phase one functional annotations</h4>
       <figure class="phase-1-functional-anotations">
         <img class="phase-1-functional-anotations-image" src="images/phase-1-functional-anotations.png" alt="Floodlight MS Phase-1 Functional Anotations"></img>
-        <figcaption> Functional annotations prepared by the phase-1 team</figcaption>
+        <figcaption> Functional annotations prepared by the phase one team</figcaption>
       </figure>
-      <h4 class="phase-1-wireframes-headline">Phase 1 wireframes</h4>
+      <h4 class="phase-1-wireframes-headline">Phase one wireframes</h4>
       <figure class="phase-1-wireframes">
         <img class="phase-1-wireframes-image" src="images/phase-1-wireframes.png" alt="Floodlight MS Phase-1 Wireframes"></img>
-        <figcaption> Wireframes prepared by the phase-1 team</figcaption>
+        <figcaption> Wireframes prepared by the phase one team</figcaption>
       </figure>
       <p class="phase-1-communication">The two teams communicated on the challenges and opportunities that lied ahead with the second phase.<p>
-      <h3 class="phase-1-infrastructure-headline">The Site Infrastructure of Phase 1</h3>
+      <h3 class="phase-1-infrastructure-headline">The site infrastructure of phase one</h3>
       <p class="phase-1-infrastructure">The phase 1 microsite included a single page format, with a single page with sections for People Living with MS, HCPS and Resources for both user types.</p>
-      <h4 class="phase-1-sitemap-headline">Phase one sitemap with three key sections - HCP, Patient and Resources</h4>
+      <h4 class="phase-1-sitemap-headline">Phase one sitemap with three key sections: Healthcare Provider, Patient and Resources</h4>
       <figure class="phase-1-sitemap">
         <img class="phase-1-sitemap-image" src="images/phase-1-sitemap.png" alt="Floodlight MS Phase-1 Sitemap"></img>
-        <figcaption> Sitemap prepared by the phase-1 team</figcaption>
+        <figcaption> Sitemap prepared by the phase one team</figcaption>
       </figure>
-      <h4 class="phase-1-full-layout-headline">Phase 1 Full  Layout</h4>
+      <h4 class="phase-1-full-layout-headline">Phase one full layout</h4>
       <figure class="phase-1-full-layout">
         <img class="phase-1-full-layout-image" src="images/phase-1-full-layout.png" alt="Floodlight MS Phase-1 Full Layout"></img>
-        <figcaption> Full site layout prepared by the phase-1 team</figcaption>
+        <figcaption> Full site layout prepared by the phase one team</figcaption>
       </figure>
-      <h4 class="updating-phase-1-headline">Updates to Phase 1 in paralell with work on Phase 2</h4>
+      <h4 class="updating-phase-1-headline">Updates to phase one in parallel with work on Phase two</h4>
       <p class="updating-phase-1">The team was asked to streamline the live microsite In parallel with the design of the full site, Highlighting the key function of allowing healthcare providers who have already adopted the tool, to access the provider portal,  eliminating the patient directed content and removing the contact form. </p>
-      <h4 class="phase-1-image-headline">Final Adjustments to the Phase 1 Microsite</h4>
+      <h4 class="phase-1-image-headline">Final adjustments to the phase one microsite</h4>
       <figure class="phase-1-update">
         <img class="phase-1-update-image" src="images/phase-1-update.png" alt="Floodlight MS Phase-1 Update"></img>
-        <figcaption> My team's approach to consolidating content on the microsite</figcaption>
+        <figcaption> My team's revisions to consolidate content on the interim microsite</figcaption>
       </figure>
 
     </section>
@@ -210,7 +210,7 @@
 
       </div>
 
-      <h3 class="user-stories-headline">User stories directed by the brief and strategic imperitives Informed the sitemap and content strategy</h3>
+      <h3 class="user-stories-headline">User stories directed by the brief and strategic imperitives informed the sitemap and content strategy</h3>
       <p class="user-stories-intro">The new site would target two key audiences, patients and providers, with the homepage presenting an overview suitable for consumption by both, but patient facing on its surface. A separate more detailed page would contains the sort of clinical content thay providers in particular would be seeking.</p>
       <h4 class="patient-user-stories-list-title">Patient user stories included:</h4>
         <ul class="patient-user-stories-list">
@@ -245,21 +245,21 @@
               </td>
             </tr>
             <tr>
-              <td class="content-strategy-summary-table-data-column1"><p>HCP Section</p>
+              <td class="content-strategy-summary-table-data-column1"><p>HCP section</p>
               </td>
-              <td class="content-strategy-summary-table-data-column2"><p> ⟶ New HCP Page<p>
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ New HCP page<p>
               </td>
             </tr>
             <tr class="">
               <td class="content-strategy-summary-table-data-column1"><p>Patient section</p>
               </td>
-              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Features & Support</p>
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Features & support section</p>
               </td>
             </tr>
             <tr>
-              <td class="content-strategy-summary-table-data-column1"><p>Resources Section</p>
+              <td class="content-strategy-summary-table-data-column1"><p>Resources section</p>
               </td>
-              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Resources Section</p>
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Resources section</p>
               </td>
             </tr>
             <tr class="">
@@ -279,7 +279,7 @@
         <li><p>HCP Support: Provides contact information for provider support</p></li>
         <li><p>Request a Demo: Allows providers to request a demo, ultimately driving them toward conversion</p></li>
       </ul>
-      <h4 class="revised-sitemap-image-title">Proposed Phase 2 Sitemap</h4>
+      <h4 class="revised-sitemap-image-title">Proposed phase two sitemap</h4>
       <figure class="phase-2-sitemap">
         <img class="phase-2-sitemap-image" src="images/floodlight-new-sitemap.png" alt="Content strategy"></img>
         <figcaption> The new sitemap</figcaption>
@@ -287,7 +287,7 @@
 
       <h3 class="manuscript-headline">The manuscript</h3>
       <p class="manuscript-intro">Written content for phase two was presented in a detailed manuscript. UX provided early insight into what components may be suitable for delivering unique content, such as cards, tables and tabs.</p>
-      <h4 class="manuscript-image-title">Phase 2 Manuscript</h4>
+      <h4 class="manuscript-image-title">Phase two manuscript</h4>
       <figure class="floodlight-manuscript">
         <img class="floodlight-manuscript-image" src="images/floodlight-manuscript-image.png" alt="Content strategy"></img>
         <figcaption>The new manuscript</figcaption>
@@ -308,25 +308,25 @@
       <h4 class="streamlining-creative-handoff-headline">Creating a design file that would cross disciplines</h4>
       <p class="streamlining-creative-handoff-intro">Seeking to streamline handoff between UX and art direction, a few key considerations went into setting up the design file so that it could cross disciplines and prevent the need for art direction to recreate the design environment in Adobe Photoshop.</p>
       <ul class="streamlining-creative-handoff-list">
-        <li><p>Clearly organize the desktop.</p>
+        <li><p>Clearly organizing the desktop</p>
           <ul>
               <li><p>Ordering artboards in logical sequence on the canvas</p></li>
               <li><p>Labeling artboards with informational names and numbers that created ordered PDF exports</p></li>
             </ul>
           </li>
-        <li><p>Employ symbols to update recurring components at one time.</p></li>
+        <li><p>Employing symbols to update recurring components at one time.</p></li>
       </ul>
-      <h4 class="workspace-image-title">An Organized Workspace</h4>
+      <h4 class="workspace-image-title">An organized workspace</h4>
       <figure class="floodlight-wireframe-sketch-workspace">
         <img class="floodlight-wireframe-sketch-workspace-image" src="floodlight-images/floodlight-wireframe-sketch-workspace.png" alt="Floodlight wireframe sketch workspace"></img>
         <figcaption>An organized sketch workspacee</figcaption>
       </figure>
-      <h4 class="labeling-image-title">Consistent Layer Names</h4>
+      <h4 class="labeling-image-title">Consistent layer names</h4>
       <figure class="floodlight-consistent-labeling">
         <img class="floodlight-consistent-labeling-image" src="floodlight-images/floodlight-consistent-labeling.png" alt="Consistent labeling of elements"></img>
         <figcaption>Clear and consistent element labeling</figcaption>
       </figure>
-      <h4 class="symbols-image-title">Using Symbols for Efficiency</h4>
+      <h4 class="symbols-image-title">Using symbols for efficiency</h4>
       <figure class="floodlight-sketch-symbols">
         <img class="floodlight-sketch-symbols-image" src="floodlight-images/floodlight-sketch-symbols.png" alt="Sketch symbols"></img>
         <figcaption>Symbols are used to minimize repetitive updates</figcaption>
@@ -344,9 +344,9 @@
       <h3 class="revisions-for-accessibility-headline">Revisions for accessibility</h3>
       <p class="revisions-for-accessibility-intro">Every project needs to be designed with accessibility in mind, so I also provided extensive consultation on how to adhere to the WCAG 2.1 AA standard for accessibility. Color contrast proved challenging to maneuver because, as is often the case, brand colors were approved by the client before our engagement and limited opportunities to create high contrast without close consideration. We also made several revisions to ensure that more obscure   guidelines were adhered to, such as the need to ensure that videos and animations of 5 seconds or more have a way to be paused, stopped or hidden.
       </p>
-      <h3 class="benefits-to-creative-design-headline">Benefits to Creative Design</h3>
+      <h3 class="benefits-to-creative-design-headline">Benefits to creative design</h3>
       <p class="benefits-to-creative-design-intro">We were able to seamlesssly work through modifications for accessibility,  continued client changes and new requests after creative design began without a delay to our timeline because our modular approach to content sections, organized workspace and collaboration in one file allowed us to work with efficient unity.</p>
-      <h4 class="creative-layout-image-set-title">Creative Layouts During Continued Collaboration</h4>
+      <h4 class="creative-layout-image-set-title">Creative layouts during continued collaboration</h4>
       <figure class="creative-layout-homepage">
         <img class="creative-layout-homepage-image" src="floodlight-images/creative-layout-homepage.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of homepage</figcaption>
@@ -379,7 +379,7 @@
 
     <section class="development-handoff">
       <h2 class="development-handoff-headline">Development handoff</h2>
-      <h3 class="functional-specifications">Functional Specifications</h3>
+      <h3 class="functional-specifications">Functional specifications</h3>
       <p class="functional-specifications-intro">I prepared functional specifications to provide clear directions for the development team. Its essential to eliminate ambiguities that create development delays. This is the opportunity to specify exactly what external URL a button should direct to, what animations and interactions are associated with a component and specify any differences in behavior between breakpoints.</p>
       <h4 class="specifications-list-headline">The document contains specifications for:</h4>
       <ul class="specifications-list">
@@ -410,7 +410,7 @@
           </ul>
         </li>
       </ul>
-      <h4 class="func-spec-image-title">Specifications Provided for the HCP Page</h4>
+      <h4 class="func-spec-image-title">Specifications provided for the HCP page</h4>
       <figure class="functional-specification-fig">
         <img class="func-spec-screen-shot-image" src="floodlight-images/func-spec-screenshot-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>New functional specifications prepared for handoff</figcaption>
@@ -424,15 +424,15 @@
         <img class="zeplin-2-image" src="floodlight-images/zeplin-2-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure> -->
-      <h4 class="zeplin-3-image-title">Layouts Exported to Zeplin for Efficient Handoff</h4>
+      <h4 class="zeplin-3-image-title">Layouts exported to Zeplin for efficient handoff</h4>
       <figure class="zeplin-3">
         <img class="zeplin-3-image" src="floodlight-images/zeplin-3-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
-      <h3 class="user-acceptance-testing">User Acceptance Testing</h3>
+      <h3 class="user-acceptance-testing">User acceptance testing</h3>
       <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live at
         <a href="https://www.floodlightms.com">floodlightms.com.</a></p>
-      <h4 class="final-layouts-image-title">Approved Designs Ready for Launch</h4>
+      <h4 class="final-layouts-image-title">Approved designs ready for launch</h4>
       <figure class="final-homepage-layout">
         <img class="homepage-layout-image" src="floodlight-images/homepage-layout-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Final homepage after UAT</figcaption>
