Updates to floodlight copy

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -447,7 +447,7 @@
     <section class="key-takeaways">
       <h2 class="key-takeaways-headline">Key takeaways</h2>
       <p class = "key-takeaways-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Ultimately we obtained project approval through the client’s promotional reviews committee, facilitated a successful implementation process and handed off to the client’s development team earlier than anticipated as a result of our workflow, allowing this brand to advertise their app sooner and increasing opportunity to build value.</p>
-      <h3 class="tips">Tips for a smooth handoff between UX and Creative</h3>
+      <h3 class="tips">Tips for a smooth handoff between UX and creative</h3>
       <p class="tips-intro">Prepare your sketch file thoughtfully</p>
       <ul class="tips-list">
         <li><p>Make the information clear and consistent for the next user in the project workflow:</p>
