--- a/my-work.html
+++ b/my-work.html
@@ -89,7 +89,7 @@
 
       <h2 class="work-headline">See my recent work</h2>
 
-      <h3 class="featured-case-study-headline">Featured Case Study</h3>
+      <h3 class="featured-case-study-headline">Featured case study</h3>
 
       <div class="featured-work">
         <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot"></img>
