Added brand-callout component

--- a/index.html
+++ b/index.html
@@ -83,13 +83,29 @@
 
     </section>
 
+    <section class="brands-callout">
+      <h4 class="brands-callout-headline">My work has improved engagement for brands across several industries</h4>
+      <img class="nih-image" src="images/homepage-brands-callout/nih-logo.png" width="" height="" alt="NIH logo">
+      <img class="acadia-image" src="images/homepage-brands-callout/acadia-logo.png" width="" height="" alt="Acadia logo">
+      <img class="genentech-image" src="images/homepage-brands-callout/genentech-logo.png" width="" height="" alt="Genentech logo">
+      <img class="roche-image" src="images/homepage-brands-callout/roche-logo.png" width="" height="" alt="Roche logo">
+      <img class="sanofi-image" src="images/homepage-brands-callout/sanofi-logo.png" width="" height="" alt="Sanofi logo">
+      <img class="pfizer-image" src="images/homepage-brands-callout/pfizer-logo.png" width="" height="" alt="Pfizer logo">
+      <img class="agile-image" src="images/homepage-brands-callout/agile-logo.png" width="" height="" alt="Agile logo">
+      <img class="parexel-image" src="images/homepage-brands-callout/parexel-logo.png" width="" height="" alt="Parexel logo">
+      <img class="cuna-image" src="images/homepage-brands-callout/cuna-mutual-logo.png" width="" height="" alt="Cuna logo">
+      <img class="discover-image" src="images/homepage-brands-callout/discover-logo.png" width="" height="" alt="Discover logo">
+      <img class="sunovion-image" src="images/homepage-brands-callout/sunovion-logo.png" width="" height="" alt="Sunovion logo">
+      <img class="intent-image" src="images/homepage-brands-callout/intent-logo.png" width="" height="" alt="Intent logo">
+    </section>
+
     <a name="work"></a>
 
     <section class="work">
 
-      <h2 class="work-headline">Recent projects</h2>
+      <h2 class="work-headline">Featured case study</h2>
 
-      <h3 class="featured-case-study-headline">Featured case study</h3>
+      <!-- <h3 class="featured-case-study-headline">Featured case study</h3> -->
 
       <div class="featured-work">
         <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot"></img>
