Replaced verve card image

--- a/my-work.html
+++ b/my-work.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="card2">
-          <img class="card-project-image" src="images/verve-thumbnail.png" alt="Verve App homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="images/verve-homepage-screenshot.png" alt="Verve App homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Wellness | Healthy lifestyle management</h6>
           <h5 class="card-project-title">Verve ios app experience design </h5>
           <button onclick="window.location.href = 'verve-2.0.html';">See the full case study</button>
